--- a/hr.ipynb
+++ b/hr.ipynb
@@ -2472,7 +2472,7 @@
    "source": [
     "#two group of work hour, left(1.0) or not(0.0)\n",
     "leftTimeGroup = workEfficiency.groupByKey().mapValues(list).cache()\n",
-    "leftTimeGroup.collect()"
+    "#leftTimeGroup.collect()"
    ]
   },
   {
